--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,3 +45,5 @@ const { title, description, image } = Astro.props;
 <meta property="twitter:title" content={title} />
 {description && <meta property="twitter:description" content={description} />}
 {image && <meta property="twitter:image" content={new URL(image, Astro.url)} />}
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.css" integrity="sha384-WsHMgfkABRyG494OmuiNmkAOk8nhO1qE+Y6wns6v+EoNoTNxrWxYpl5ZYWFOLPCM" crossorigin="anonymous">
