--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
@@ -12,7 +13,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <html lang="en">
 	<head>
-		<BaseHead title={title} description={description} image={heroImage} />
+		<BaseHead title={title} description={description} />
 		<style>
 			main {
 				width: calc(100% - 2em);
@@ -60,7 +61,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				{
 					heroImage && (
 						<div class="hero-image">
-							<img width={1020} height={510} src={heroImage} alt="" />
+							<Image src={heroImage} width={1020} height={510} alt="" />
 						</div>
 					)
 				}
