--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import BaseHead from "../../components/BaseHead.astro";
 import Header from "../../components/Header.astro";
 import Footer from "../../components/Footer.astro";
@@ -95,10 +96,10 @@ const posts: CollectionEntry<"blog">[] = (await getCollection("blog")).sort(
 							<li>
 								<a href={`/blog/${post.id}/`}>
 									{post.data.heroImage && (
-										<img
+										<Image
+											src={post.data.heroImage}
 											width={720}
 											height={360}
-											src={post.data.heroImage}
 											alt=""
 										/>
 									)}
