update text on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 			</figure>
 			<p>
 				Hi, I'm Anton Geraschenko. I'm a mathematician and software engineer.
-				I currently work at <a href="https://plasmidsaurus.com">Plasmidsaurus</a>.
-				I've also worked/studied at Google, Eonite Perception, Caltech,
+				I've worked/studied at Google, Plasmidsaurus, Eonite Perception, Caltech,
 				UC Berkeley, and Brandeis.
 			</p>
 			<p>
@@ -56,8 +55,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 				href="https://www.nature.com/articles/s41586-024-08072-x">to map
 				the ionosphere</a> and using differentiable programming and
 				monte carlo sampling to <a
-				href="https://github.com/verilylifesciences/site-selection-tool">make
-				clinical trials faster</a>.
+				href="https://github.com/verilylifesciences/site-selection-tool">design
+				clinical trials</a>.
 			</p>
 
 			<p>
